--- a/Finam.ipynb
+++ b/Finam.ipynb
@@ -19,10 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "candles = pd.read_csv('C:/Users/olafe/Downloads/forecast_data/forecast_data/candles.csv')\n",
-    "candles_2 = pd.read_csv('C:/Users/olafe/Downloads/forecast_data/forecast_data/candles_2.csv')\n",
-    "news = pd.read_csv('C:/Users/olafe/Downloads/forecast_data/forecast_data/news.csv')\n",
-    "news_2 = pd.read_csv('C:/Users/olafe/Downloads/forecast_data/forecast_data/news_2.csv')"
+    "candles = pd.read_csv('/forecast_data/candles.csv')\n",
+    "candles_2 = pd.read_csv('/forecast_data/candles_2.csv')\n",
+    "news = pd.read_csv('/forecast_data/news.csv')\n",
+    "news_2 = pd.read_csv('/forecast_data/news_2.csv')"
    ]
   },
   {
